@@ -2,3 +2,10 @@
 extends =
     test-plone-4.3.x.cfg
     https://raw.github.com/4teamwork/ftw-buildouts/master/plone-development.cfg
+
+versions = versions
+
+[versions]
+plone.app.imaging = 1.0.9
+plone.scale = 1.3.2
+Pillow = 2.0.0
